double load fix

--- a/src/app/components/expenses/expenses-modal/expenses-modal.component.html
+++ b/src/app/components/expenses/expenses-modal/expenses-modal.component.html
@@ -46,7 +46,7 @@
           </small> -->
         </div>
 
-        <!-- Report Type -->
+        <!-- Report Type
         <div class="form-group">
           <label for="reportType">Tip Izvješća<span class="required">*</span></label>
           <div class="select-wrapper">
@@ -69,13 +69,7 @@
             </select>
             <i class="fas fa-chevron-down select-arrow"></i>
           </div>
-          <!-- <small class="form-help-text" *ngIf="isAdmin && !reportData.userId">
-            Prvo odaberite korisnika
-          </small> -->
-          <!-- <small class="form-help-text" *ngIf="reportTypes.length === 1">
-            Automatski odabran na osnovu uloge korisnika
-          </small> -->
-        </div>
+        </div> -->
 
         <!-- Season -->
         <div class="form-group">
